--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": false,
     "skipLibCheck": true,
     "strict": true,
@@ -23,18 +19,10 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./src/*"
-      ],
-      "@/styles/*": [
-        "./src/styles/*"
-      ],
-      "@/constants/*": [
-        "./src/constants/*"
-      ],
-      "@/context/*": [
-        "./src/context/*"
-      ]
+      "@/*": ["./src/*"],
+      "@/styles/*": ["./src/styles/*"],
+      "@/constants/*": ["./src/constants/*"],
+      "@/context/*": ["./src/context/*"]
     }
   },
   "include": [
@@ -45,8 +33,5 @@
     "functions/**/*.ts",
     "playwright.config.new.mjs"
   ],
-  "exclude": [
-    "node_modules",
-    "tests/**/*"
-  ]
+  "exclude": ["node_modules"]
 }
